--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -3,7 +3,7 @@ section#pricing-table.row.flat
     .container
       .row
         .col-md-12
-          .block
+          .block.text-center
             h2.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms') Cleaning Packages
   .container
     .row
