--- a/_pugfiles/services.pug
+++ b/_pugfiles/services.pug
@@ -2,7 +2,7 @@ section#service-page.pages.service-page
   .container
     .row
       .col-md-6
-        .block
+        .block.text-center
           h2.subtitle.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms') Your Cleaning Specialists
           <br/>
           .row.service-parts
